<resources>
    <string name="app_name">RecipeXmlApp</string>
    <string name="categories">Категории</string>
    <string name="favorites">ИЗБРАННОЕ</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="cooking_method">Способ приготовления</string>
    <string name="portions">Порции:</string>
    <string name="default_portions">1</string>
    <string name="content_description_header">Заголовок экрана</string>
    <string name="content_description_category">Изображение категории</string>
    <string name="content_description_recipe">Изображение рецепта</string>
    <string name="ingredient_quantity_format">%s %s</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="step_number_format">%d.</string>
    <string name="recipe_title_format">Recipe: %s</string>
    <string name="recipe_not_found">Recipe not found</string>
    <string name="empty_favorites">Нет избранных рецептов</string>
</resources>